# edge-ai-system-orchestrator

./: CMakeLists.txt  README.md
src/: main.cpp
src/orchestrator/: Contracts.hpp  CoreScheduler.cpp  CoreScheduler.hpp  RuntimeConfig.cpp  RuntimeConfig.hpp  SyntheticInputs.cpp  SyntheticInputs.hpp
tests/: orchestrator_tests.cpp
